fix homepage jumping during load

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,11 @@
     height: auto;
 }
 
+.featured-articles-slider {
+    display: flex;
+    flex-direction: row;
+}
+
 .arrow-area {
     display: flex;
     flex-direction: row;
@@ -18,8 +23,7 @@
 
 .fade-left,
 .fade-right,
-.arrow-area,
-.featured-aricles-slider {
+.arrow-area {
     position: absolute;
 }
 
@@ -38,7 +42,6 @@
 .fade-left,
 .fade-right {
     pointer-events: none;
-    /* z-index: 1100; */
 }
 
 .featured-articles-front, .chevron-down {
@@ -101,6 +104,7 @@
     flex-direction: column;
     align-items: center;
     font-size: 1.2em;
+    height: 86px;
 }
 
 .chevron-down * {
